# archmind-mvp

./: .gitignore  README.TXT  README.md  pyproject.toml  pytest.ini
.archmind/: plan.json  plan.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: architecture_prompt.md  stabilization_checklist.md
docs/backlog/: architecture_improvements.md
docs/changelog/: v0.3.md  v0.4.md  v0.5.md  (+1 more)
examples/: last_raw_output.txt  last_repaired_output.txt  sample_input.txt  sample_output.md
frontend/: next.config.ts
scripts/: make_wheelhouse.sh  offline_install.sh  offline_install_verify.sh  telegram_bot.py  wheelhouse_build.sh
src/: main.py
tests/: brain_cases.py  test_auto_fix.py  test_brain.py  test_brain_pipeline_alignment.py  test_cli_deploy.py  test_cli_fix.py  test_cli_fix_apply_noop_success.py  test_cli_fix_dry_run.py  test_cli_fix_smoke.py  test_cli_pipeline.py  test_cli_run.py  test_command_executor.py  test_dashboard_detail_selection_regression.py  test_data_tool_template.py  test_decision.py  test_deploy.py  test_design_suggester.py  test_environment.py  test_evaluate.py  test_execution_history.py  test_failure_classification.py  test_fastapi_ddd_template.py  test_fastapi_template.py  test_fix_frontend_plans.py  test_fix_skip.py  test_fixer_cors.py  test_fixer_rules.py  test_frontend_runtime.py  test_fullstack_ddd_template.py  test_generator_entities.py  test_generator_modules.py  test_generator_scaffold.py  test_git_utils.py  test_github_repo.py  test_idea_normalizer.py  test_internal_tool_template.py  test_next_suggester.py  test_nextjs_template.py  test_offline_install_docs.py  test_patcher.py  (+22 more)
(+167 files in other folders)
