[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archmind"
version = "0.1.0"
description = "ArchMind - Prompt to Architecture Generator"
requires-python = ">=3.11"
dependencies = ["requests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
