[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archmind"
version = "0.1.0"
description = "ArchMind - Prompt to Architecture Generator"
requires-python = ">=3.11"
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["pytest==9.0.2"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
archmind = "archmind.cli:main"
