[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archmind"
version = "0.1.0"
description = "ArchMind - Prompt to Architecture Generator"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.11"
dependencies = ["requests"]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "build==1.2.1",
  "twine==5.1.1",
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "sqlmodel==0.0.21",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "httpx==0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
archmind = "archmind.cli:main"
